[ARM] PR target/71270 fix neon_valid_immediate for big-endian

PR target/71270
	* config/arm/arm.c (neon_valid_immediate): Reject vector constants
	in big-endian mode when they are not a single duplicated value.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@244716 138bc75d-0d04-0410-961f-82ee72b054a4